--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,10 @@
 {
   "dependencies": {
     "com.unity.burst": "1.1.2",
-    "com.unity.collab-proxy": "1.2.16",
-    "com.unity.ide.rider": "1.1.4",
-    "com.unity.ide.vscode": "1.1.3",
-    "com.unity.jobs": "0.2.2-preview.6",
+    "com.unity.jobs": "0.2.3-preview.9",
+    "com.unity.postprocessing": "2.2.2",
     "com.unity.test-framework": "1.1.9",
     "com.unity.textmeshpro": "2.0.1",
-    "com.unity.timeline": "1.2.9",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
