--- a/Assets/Hertzole/HertzVox/Scripts/Runtime/Hertzole.HertzVox.Runtime.asmdef
+++ b/Assets/Hertzole/HertzVox/Scripts/Runtime/Hertzole.HertzVox.Runtime.asmdef
@@ -4,7 +4,8 @@
         "GUID:e0cd26848372d4e5c891c569017e11f1",
         "GUID:2665a8d13d1b3f18800f46e256720795",
         "GUID:8a2eafa29b15f444eb6d74f94a930e1d",
-        "GUID:d8b63aba1907145bea998dd612889d6b"
+        "GUID:d8b63aba1907145bea998dd612889d6b",
+        "GUID:fb24642277b1db2449da7ac148ce939d"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
